# model-rag

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
assets/: file_classifier.csv  file_classifier_entries_upd.csv  file_classifier_insights.csv
graph/: graph.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py
