[project]
name = "model-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "coderTtxi12",email = "oliver.coding8@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"

